fix(backdrop): ensure invisible backdrop is out of screen
[skip ci]

--- a/@ecomplus/storefront-components/src/scss/ABackdrop.scss
+++ b/@ecomplus/storefront-components/src/scss/ABackdrop.scss
@@ -1,6 +1,6 @@
 .backdrop {
   position: fixed;
-  top: 0;
+  top: -100vh;
   left: 0;
   width: 100vw;
   height: 100vh;
